@@ -44,7 +44,6 @@ void nautilus_run_lib_self_checks (void);
 	macro (nautilus_self_check_directory) \
 	macro (nautilus_self_check_file) \
 	macro (nautilus_self_check_icon_container) \
-	macro (nautilus_self_check_icon_factory) \
 /* Add new self-check functions to the list above this line. */
 
 /* Generate prototypes for all the functions. */
